# FnfModManager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
HookDLL/: hooks.cpp
Launcher/: launcher.cpp  launcher.rc  resource.h
Overlay/: overlay_editor.cpp
Shared/: SharedMemory.h
SystemStats/: SystemStats.cpp
